--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,15 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.4",
     "@material-ui/icons": "^4.11.2",
+    "@types/react-redux": "^7.1.18",
     "next": "11.1.0",
+    "next-redux-wrapper": "^7.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.38.0"
   },
   "devDependencies": {
     "@types/node": "^16.6.1",
