--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,31 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-beta.4",
-    "@material-ui/icons": "^4.11.2",
-    "@types/react-redux": "^7.1.18",
-    "next": "11.1.0",
-    "next-redux-wrapper": "^7.0.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.38.0"
-  },
-  "devDependencies": {
-    "@types/node": "^16.6.1",
-    "@types/react": "^17.0.18",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "typescript": "^4.3.5"
-  }
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.1.4",
+        "@emotion/styled": "^11.0.0",
+        "@material-ui/core": "^5.0.0-alpha.24",
+        "@material-ui/icons": "^4.11.2",
+        "@types/react-redux": "^7.1.16",
+        "axios": "^0.21.1",
+        "next": "10.0.6",
+        "next-redux-wrapper": "^6.0.2",
+        "react": "17.0.1",
+        "react-dom": "17.0.1",
+        "react-redux": "^7.2.2",
+        "redux": "^4.0.5",
+        "redux-thunk": "^2.3.0",
+        "sass": "^1.32.6"
+    },
+    "devDependencies": {
+        "@types/node": "^14.14.25",
+        "@types/react": "^17.0.1",
+        "typescript": "^4.1.3"
+    }
 }
